--- a/app/src/main/res/layout/tampilan_1.xml
+++ b/app/src/main/res/layout/tampilan_1.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    android:layout_width="match_parent">
 <LinearLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -19,7 +18,6 @@
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="10pt"
             android:layout_margin="10pt">
             <ImageView
                 android:layout_width="50pt"
@@ -56,6 +54,51 @@
         </LinearLayout>
     </LinearLayout>
 
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="140pt"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="10pt"
+            android:layout_marginVertical="10pt"
+            android:scaleType="centerCrop"
+            android:src="@drawable/profile_user" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="Tes satu dua tiga"
+            android:textColor="@color/white"
+            android:textSize="14pt" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="140pt"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="10pt"
+            android:layout_marginVertical="10pt"
+            android:scaleType="centerCrop"
+            android:src="@drawable/profile_user" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="Tes satu dua tiga"
+            android:textColor="@color/white"
+            android:textSize="14pt" />
+    </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
